--- a/omens-stylesheet-v2.css
+++ b/omens-stylesheet-v2.css
@@ -3426,7 +3426,8 @@ body::-webkit-scrollbar-track {
 }
 .omens-topics-container {
   background: var(--1f1);
-  margin: 0 10px;
+  margin: 10px;
+  border-radius:5px;
   padding: 25px;
   display: grid;
   gap: 25px;
@@ -3570,7 +3571,7 @@ body::-webkit-scrollbar-track {
   padding: 25px;
   position: relative;
   text-align: left;
-  border-radius: 5px 5px 0 0;
+  border-radius: 5px;
 }
 .topic-title-row b {
   display: inline-block;
