--- a/omens-stylesheet-v2.css
+++ b/omens-stylesheet-v2.css
@@ -3396,7 +3396,7 @@ body::-webkit-scrollbar-track {
   place-items: center start;
   justify-content: space-between;
   background-image: url(https://i.ibb.co/ftYm3Wr/image.png);
-  background-color: rgba(0, 0%, 0%, 80%);
+  background-color: rgba(0, 0, 0, 80%);
   background-blend-mode: overlay;
   margin-top: -55px;
 }
